--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  asn1lib: ^0.5.3
   crypto: ^2.1.4
+  encrypt: ^3.2.0
   http: ^0.12.0
   pointycastle: ^1.0.0
-  asn1lib: ^0.5.3
+  shared_preferences: ^0.5.6
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -49,8 +51,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - testAssets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
