--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   http: ^0.12.0
   pointycastle: ^1.0.0
   shared_preferences: ^0.5.6
+  qr_flutter: any
 
 
   # The following adds the Cupertino Icons font to your application.
